--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -9,6 +9,7 @@ body {
         font-size: 0.8em;
         color: var(--text-muted);
         gap: 5px;
+        margin-top: 10px;
     }
 
     .notelink {
@@ -111,7 +112,7 @@ body {
         gap: 5px;
     }
 
-    .header-meta {
+    header {
         margin-bottom: 1.8em;
     }
 
