--- a/src/site/_includes/components/user/notes/header/001-timestamp.njk
+++ b/src/site/_includes/components/user/notes/header/001-timestamp.njk
@@ -1,3 +1,3 @@
-<div class="timestamps">{% if created %}<div>Created At: <span class="human-date" data-date="{{created}}"></span></div>{% endif %}
-{% if updated %}<div>Updated At: <span class="human-date" data-date="{{updated}}"></span></div>{% endif %}
+<div class="timestamps">{% if created %}<div><i icon-name="calendar-plus"></i> <span class="human-date" data-date="{{created}}"></span></div>{% endif %}
+{% if updated %}<div><i icon-name="calendar-clock"></i> <span class="human-date" data-date="{{updated}}"></span></div>{% endif %}
 </div>
