--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -3,6 +3,9 @@
 }
 
 body {
+    --graph-main: var(--text-accent);
+    --graph-muted: rgba(126, 126, 126, 0.5);
+
     .timestamps {
         display: flex;
         flex-direction: row;
