--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -43,6 +43,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
               {% endfor %}
             </div>
           {% endif %}
+          {%- if meta.timestampSettings.showCreated or meta.timestampSettings.showUpdated -%}
           <div class="timestamps">
             {%- if meta.timestampSettings.showCreated and created -%}
             <div><i icon-name="calendar-plus"></i> <span class="human-date" data-date="{{created}}"></span></div>
@@ -51,6 +52,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
             <div><i icon-name="calendar-clock"></i> <span class="human-date" data-date="{{updated}}"></span></div>
             {%- endif -%}
           </div>
+          {%- endif -%}
         </div>
       {% for imp in dynamics.common.header %}
         {% include imp %}
