--- a/src/site/_includes/components/user/common/footer/003-footNote.njk
+++ b/src/site/_includes/components/user/common/footer/003-footNote.njk
@@ -1,4 +1,5 @@
 <script>
+  {# Footnote script #}
 function fancyFootnote(element) {
   var notenum = 0;
   document.querySelectorAll(element).forEach(function (post) {
