--- a/src/site/_includes/components/user/index/header/forest.njk
+++ b/src/site/_includes/components/user/index/header/forest.njk
@@ -7,7 +7,7 @@
                 {% if tree[0] == 0 %}
                 <span></span>
                 {% else %}
-                <img src="/img/{{tree[0]}}.svg" style="width: auto;height: {{5 + (10 * tree[3])}}px;" />
+                <img src="/img/{{tree[0]}}.svg" alt="" style="width: auto;height: {{5 + (10 * tree[3])}}px;" />
                 {% endif %}
             </a>
             {% endfor %}
