single link for home page

--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -1,5 +1,5 @@
 ---
-permalink: "notes/{{ page.fileSlug | slugify }}/"
+permalink: "{%- if 'gardenEntry' in tags -%}/{%- else -%}notes/{{ page.fileSlug | slugify }}/{%- endif -%}"
 ---
 <!DOCTYPE html>
 <html lang="en">
