--- a/src/site/_includes/layouts/index.njk
+++ b/src/site/_includes/layouts/index.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{{ noteTitle }} | {{meta.siteName}}</title>
+    <title>{% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %} | {{meta.siteName}}</title>
     {%include "components/pageheader.njk"%}
     {% for imp in dynamics.common.head %}
       {% include imp %}
@@ -23,7 +23,7 @@
     <main class="content cm-s-obsidian">
       <header>
       {% if settings.dgShowInlineTitle === true %}
-        <h1>{{ noteTitle  }}</h1>
+        <h1>{{ title }}</h1>
       {% endif %}
 
       <div class="header-meta">
@@ -53,7 +53,7 @@
         {% include imp %}
       {% endfor %}
       {%- for garden in collections.gardenEntry -%}
-        {{garden.templateContent | hideDataview | link | taggify | highlight | safe }}
+        {{ content | hideDataview | link | taggify | highlight | safe}}
       {%- endfor -%}
       {% for imp in dynamics.common.afterContent %}
         {% include imp %}
