--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -202,6 +202,23 @@ body {
         z-index: 999;
     }
 
+    .footnote-ref {
+        line-height: 85%;
+
+        .fnote-marker {
+            background-color: var(--text-accent);
+            padding: 2px 5px;
+            color: white;
+            border-radius: 4px;
+            text-decoration: none;
+            font-size: 0.7em;
+            margin-top: -3px;
+            &:hover {
+                opacity: 0.7;
+            }
+        }
+    }
+
     .shownote {
         display: block;
     }
