--- a/src/site/404.njk
+++ b/src/site/404.njk
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Nothing here | {{meta.siteName}}</title>
+        <title>Nothing here</title>
         <link href="/styles/digital-garden-base.css" rel="stylesheet">
         {%-if meta.themeStyle%}
             <link href="/styles/obsidian-base.css" rel="stylesheet">
