--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -1,10 +1,10 @@
 ---
-permalink: "{%- if 'gardenEntry' in tags -%}/{%- else -%}notes/{{ page.fileSlug | slugify }}/{%- endif -%}"
+permalink: "notes/{{ page.fileSlug | slugify }}/"
 ---
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %} | {{meta.siteName}}</title>
+    <title>{% if title %}{{ title }}{% else %}{{ page.fileSlug }}{% endif %}</title>
     {%include "components/pageheader.njk"%}
     {% for imp in dynamics.common.head %}
       {% include imp %}
@@ -43,16 +43,6 @@ permalink: "{%- if 'gardenEntry' in tags -%}/{%- else -%}notes/{{ page.fileSlug 
               {% endfor %}
             </div>
           {% endif %}
-          {%- if meta.timestampSettings.showCreated or meta.timestampSettings.showUpdated -%}
-          <div class="timestamps">
-            {%- if meta.timestampSettings.showCreated and created -%}
-            <div><i icon-name="calendar-plus"></i> <span class="human-date" data-date="{{created}}"></span></div>
-            {%- endif -%}
-            {%- if meta.timestampSettings.showUpdated and updated -%}
-            <div><i icon-name="calendar-clock"></i> <span class="human-date" data-date="{{updated}}"></span></div>
-            {%- endif -%}
-          </div>
-          {%- endif -%}
         </div>
       {% for imp in dynamics.common.header %}
         {% include imp %}
@@ -67,7 +57,7 @@ permalink: "{%- if 'gardenEntry' in tags -%}/{%- else -%}notes/{{ page.fileSlug 
       {% for imp in dynamics.notes.beforeContent %}
         {% include imp %}
       {% endfor %}
-      {{ content | hideDataview | link | taggify | highlight | safe}}
+      {{ content | hideDataview | link | taggify | safe}}
       {% for imp in dynamics.common.afterContent %}
         {% include imp %}
       {% endfor %}
@@ -84,13 +74,11 @@ permalink: "{%- if 'gardenEntry' in tags -%}/{%- else -%}notes/{{ page.fileSlug 
       {%include "components/linkPreview.njk"%}
     {% endif %}
     {% include "components/references.njk" %}
-    {% include "components/timestamps.njk" %}
     {% for imp in dynamics.common.footer %}
       {% include imp %}
     {% endfor %}
     {% for imp in dynamics.notes.footer %}
       {% include imp %}
     {% endfor %}
-    
   </body>
 </html>
