--- a/src/site/_includes/layouts/versionednote.njk
+++ b/src/site/_includes/layouts/versionednote.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{{ item.title }} | {{meta.siteName}}</title>
+    <title>{{ item.title }}</title>
     {%include "components/pageheader.njk"%}
   </head>
   <body>
