--- a/src/site/_includes/components/user/notes/header/001-reading-convention.njk
+++ b/src/site/_includes/components/user/notes/header/001-reading-convention.njk
@@ -3,7 +3,7 @@
 {%- if note.data.tags and 'reading-convention' in note.data.tags -%}
 <div class="callout" data-callout="info">
     <div class="callout-title">{{ note.data.title or note.fileSlug }}</div>
-    {{ note.templateContent | hideDataview | link | taggify | highlight | safe}}
+    {{ note.templateContent | hideDataview | link | taggify | safe}}
 </div>
 {%- endif -%}
 {%- endfor -%}
