--- a/src/site/_includes/components/user/common/footer/001-themeSwitcher.njk
+++ b/src/site/_includes/components/user/common/footer/001-themeSwitcher.njk
@@ -1,24 +1,29 @@
-<a href="mailto:connect@utsob.me?subject=Regarding {{title}}&body=Discussing {{meta.siteBaseUrl}}{{permalink}}"><i class="fa fa-envelope-o" title="Discuss" id="emailme" aria-hidden="true"></i></a>
-<i class="fa" id="theme-switch" aria-hidden="true"></i>
+<aside id="floating-control">
+    <a  id="emailme" href="mailto:connect@utsob.me?subject=Regarding {{title}}&body=Discussing {{meta.siteBaseUrl}}{{permalink}}"><i class="svg-icon" icon-name="mail-plus" title="Discuss" aria-hidden="true"></i></a>
+    <span id="theme-switch">
+        <i class="svg-icon light" icon-name="sun" aria-hidden="true"></i>
+        <i class="svg-icon dark" icon-name="moon" aria-hidden="true"></i>
+        <i class="svg-icon auto" icon-name="sun-moon" aria-hidden="true"></i>
+    </span>
+</aside>
+
     
 <script>
     function setThemeIcon(theme) {
-        let toAdd, toRemove;
+        let toAdd;
         switch (theme) {
             case 'dark':
-                toAdd = 'fa-sun-o';
-                toRemove = ['fa-moon-o', 'fa-adjust'];
+                toRemove = ['auto', 'light'];
                 break;
             case 'light':
                 toAdd = 'fa-adjust';
-                toRemove = ['fa-moon-o', 'fa-sun-o'];
+                toRemove = ['dark', 'auto'];
                 break;
             default:
-                toAdd = 'fa-moon-o';
-                toRemove = ['fa-adjust', 'fa-sun-o'];
+                toRemove = ['light', 'dark'];
                 break;
         }
-        document.getElementById('theme-switch').classList.add(toAdd);
+        document.getElementById('theme-switch').classList.add(theme);
         document.getElementById('theme-switch').classList.remove(...toRemove);
     }
     function setTheme(theme, setIcon) {
