--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -186,6 +186,8 @@ body {
         .svg-icon,
         i {
             cursor: pointer;
+            height: 24px;
+            width: auto;
         }
 
         #theme-switch {
