--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -379,10 +379,15 @@ ul.task-list {
 
 .notelink {
     padding: 5px 0 5px 25px;
+    display: flex;
+    align-items: center;
     a {
         &:hover {
             text-decoration: underline !important;
         }
+    }
+    svg {
+        flex-shrink: 0;
     }
 }
 
@@ -713,4 +718,20 @@ body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="3"]::before,
 body.filetree-note-icon .filename[data-note-icon="3"]::before,
 body.links-note-icon .internal-link[data-note-icon="3"]::before {
     background-image: var(--note-icon-3);
+}
+
+.timestamps {
+    display: flex;
+    flex-direction: row;
+    font-size: 0.8em;
+    color: var(--text-muted);
+    gap: 10px;
+    margin-top: 20px;
+
+    div {
+        display: flex;
+        flex-direction: row;
+        gap: 3px;
+        align-items: center;
+    }
 }
