--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -471,3 +471,8 @@ body.filetree-note-icon .filename[data-note-icon="withered"]::before,
 body.links-note-icon .internal-link[data-note-icon="withered"]::before {
     background-image: url(/img/withered.svg);
 }
+
+.align-icon {
+    display: inline-flex;
+    align-items: center;
+}
