--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -456,19 +456,22 @@ body {
 
 body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="stone"]::before,
 body.filetree-note-icon .filename[data-note-icon="stone"]::before,
-body.links-note-icon .internal-link[data-note-icon="stone"]::before {
+body.links-note-icon .internal-link[data-note-icon="stone"]::before,
+body.backlinks-note-icon .backlink[data-note-icon="stone"]::before {
     background-image: url(/img/stone.svg);
 }
 
 body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="signpost"]::before,
 body.filetree-note-icon .filename[data-note-icon="signpost"]::before,
-body.links-note-icon .internal-link[data-note-icon="signpost"]::before {
+body.links-note-icon .internal-link[data-note-icon="signpost"]::before,
+body.backlinks-note-icon .backlink[data-note-icon="signpost"]::before {
     background-image: url(/img/signpost.svg);
 }
 
 body.title-note-icon .cm-s-obsidian > header > h1[data-note-icon="withered"]::before,
 body.filetree-note-icon .filename[data-note-icon="withered"]::before,
-body.links-note-icon .internal-link[data-note-icon="withered"]::before {
+body.links-note-icon .internal-link[data-note-icon="withered"]::before,
+body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
     background-image: url(/img/withered.svg);
 }
 
