--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -479,3 +479,36 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
     display: inline-flex;
     align-items: center;
 }
+
+.pill {
+  background-color: var(--tag-background);
+  border: var(--tag-border-width) solid var(--tag-border-color);
+  border-radius: var(--tag-radius);
+  color: var(--tag-color);
+  font-size: var(--tag-size);
+  text-decoration: var(--tag-decoration);
+  padding: var(--tag-padding-y) var(--tag-padding-x);
+  line-height: 1;
+
+  &:hover {
+        background-color: var(--tag-background-hover);
+        border: var(--tag-border-width) solid var(--tag-border-color-hover);
+        color: var(--tag-color-hover);
+        text-decoration: var(--tag-decoration-hover);
+    }
+}
+
+.aliases {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+    margin-top: 20px;
+    color: var(--tag-color);
+
+    .heading:only-child {
+        display: none;
+    }
+
+    
+}
