--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -485,16 +485,16 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
 }
 
 .pill {
-  background-color: var(--tag-background);
-  border: var(--tag-border-width) solid var(--tag-border-color);
-  border-radius: var(--tag-radius);
-  color: var(--tag-color);
-  font-size: var(--tag-size);
-  text-decoration: var(--tag-decoration);
-  padding: var(--tag-padding-y) var(--tag-padding-x);
-  line-height: 1;
+    background-color: var(--tag-background);
+    border: var(--tag-border-width) solid var(--tag-border-color);
+    border-radius: var(--tag-radius);
+    color: var(--tag-color);
+    font-size: var(--tag-size);
+    text-decoration: var(--tag-decoration);
+    padding: var(--tag-padding-y) var(--tag-padding-x);
+    line-height: 1;
 
-  &:hover {
+    &:hover {
         background-color: var(--tag-background-hover);
         border: var(--tag-border-width) solid var(--tag-border-color-hover);
         color: var(--tag-color-hover);
@@ -513,6 +513,13 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
     .heading:only-child {
         display: none;
     }
+}
 
-    
+.journal-icons {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+    margin-top: 20px;
+    color: var(--tag-color);
 }
