--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -409,3 +409,7 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
         display: none;
     }
 }
+
+.header-tags {
+    gap: 5px;
+}
