table fixes and deploy

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -154,7 +154,9 @@ body {
     }
 
     .cm-s-obsidian {
-        overflow-x: scroll;
+        .table-wrapper {
+            overflow-x: scroll;
+        }
     }
 
     .cm-s-obsidian > *[id] {
