--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -448,3 +448,19 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
 .fullpage-overlay {
     position: fixed;
 }
+
+.sidebar {
+    .toc-container {
+        max-height: unset;
+
+        @media (max-width: 1400px) {
+            max-height: 320px;
+        }
+    }
+
+    .backlinks {
+        @media (max-width: 1400px) {
+            order: 3;
+        }
+    }
+}
