table fixes and deploy

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -459,6 +459,7 @@ body.backlinks-note-icon .backlink[data-note-icon="withered"]::before {
     }
 
     .backlinks {
+        flex: unset;
         @media (max-width: 1400px) {
             order: 3;
         }
