--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -177,7 +177,7 @@ body {
             height: auto;
 
             img {
-                max-width: 100%;
+                width: 100%;
                 height: auto;
             }
         }
