--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -113,7 +113,7 @@ body {
         overflow-x: hidden;
 
         .search-button {
-            margin-right: 10px;
+            margin: 10px;
             min-width: 160px;
             margin-bottom: 20px;
         }
