sidebar scroll style fix

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -122,6 +122,7 @@ body {
             flex: 1;
             overflow-y: auto;
             overflow-x: hidden;
+            margin-right: -10px;
         }
         .notelink {
             border-radius: 10px;
